[gd_scene load_steps=3 format=3 uid="uid://csettingsmenu1"]

[ext_resource type="Script" path="res://scripts/SettingsMenu.gd" id="1"]
[ext_resource type="Theme" path="res://themes/KeyboardDefenseTheme.tres" id="2"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2")
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.04, 0.035, 0.06, 1)

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -280.0
offset_top = -260.0
offset_right = 280.0
offset_bottom = 260.0
grow_horizontal = 2
grow_vertical = 2

[node name="Content" type="VBoxContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="Panel/Content"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
theme_override_colors/font_color = Color(0.98, 0.84, 0.44, 1)
text = "Settings"
horizontal_alignment = 1

[node name="AudioSection" type="VBoxContainer" parent="Panel/Content"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="AudioLabel" type="Label" parent="Panel/Content/AudioSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(0.65, 0.86, 1, 1)
text = "Audio"

[node name="MusicRow" type="HBoxContainer" parent="Panel/Content/AudioSection"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="MusicLabel" type="Label" parent="Panel/Content/AudioSection/MusicRow"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Music Volume"

[node name="MusicSlider" type="HSlider" parent="Panel/Content/AudioSection/MusicRow"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.0
max_value = 1.0
step = 0.05
value = 0.8

[node name="MusicValue" type="Label" parent="Panel/Content/AudioSection/MusicRow"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "80%"
horizontal_alignment = 2

[node name="SFXRow" type="HBoxContainer" parent="Panel/Content/AudioSection"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="SFXLabel" type="Label" parent="Panel/Content/AudioSection/SFXRow"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "SFX Volume"

[node name="SFXSlider" type="HSlider" parent="Panel/Content/AudioSection/SFXRow"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.0
max_value = 1.0
step = 0.05
value = 1.0

[node name="SFXValue" type="Label" parent="Panel/Content/AudioSection/SFXRow"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "100%"
horizontal_alignment = 2

[node name="MusicToggle" type="CheckButton" parent="Panel/Content/AudioSection"]
layout_mode = 2
button_pressed = true
text = "Music Enabled"

[node name="SFXToggle" type="CheckButton" parent="Panel/Content/AudioSection"]
layout_mode = 2
button_pressed = true
text = "Sound Effects Enabled"

[node name="TypingSoundsToggle" type="CheckButton" parent="Panel/Content/AudioSection"]
layout_mode = 2
button_pressed = true
text = "Typing Sounds"

[node name="Separator1" type="HSeparator" parent="Panel/Content"]
layout_mode = 2

[node name="GameplaySection" type="VBoxContainer" parent="Panel/Content"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="GameplayLabel" type="Label" parent="Panel/Content/GameplaySection"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(0.65, 0.86, 1, 1)
text = "Gameplay"

[node name="ScreenShakeToggle" type="CheckButton" parent="Panel/Content/GameplaySection"]
layout_mode = 2
button_pressed = true
text = "Screen Shake"

[node name="ShowWPMToggle" type="CheckButton" parent="Panel/Content/GameplaySection"]
layout_mode = 2
button_pressed = true
text = "Show WPM"

[node name="ShowAccuracyToggle" type="CheckButton" parent="Panel/Content/GameplaySection"]
layout_mode = 2
button_pressed = true
text = "Show Accuracy"

[node name="Separator2" type="HSeparator" parent="Panel/Content"]
layout_mode = 2

[node name="ButtonRow" type="HBoxContainer" parent="Panel/Content"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 16

[node name="BackButton" type="Button" parent="Panel/Content/ButtonRow"]
custom_minimum_size = Vector2(140, 44)
layout_mode = 2
text = "Back"

[node name="ResetButton" type="Button" parent="Panel/Content/ButtonRow"]
custom_minimum_size = Vector2(140, 44)
layout_mode = 2
text = "Reset Defaults"
